Fixa align mellan radiogroup-icon och text

--- a/src/assets/partials/_components.radio-group.scss
+++ b/src/assets/partials/_components.radio-group.scss
@@ -24,6 +24,11 @@
   height: $component-height;
 }
 
+.radio-button__text {
+  position: relative;
+  top: 1px;
+}
+
 .radio-button__icon {
   display: inline-block;
   min-width: 18px;
